# tripbreeze-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTED_OPTIONAL_TASKS.md  README.md  SMTP_SETUP.md  app.py  config.py  constants.py  docker-compose.yml  docker-entrypoint.sh  model_catalog.py  pyproject.toml  requirements.txt  settings.py
.streamlit/: secrets.toml.example
application/: graph.py  state.py  workflow_types.py
docs/: ethics.md
evals/: rag_eval_dataset.jsonl
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
infrastructure/: currency_utils.py  email_sender.py  itinerary_links.py  logging_utils.py  pdf_generator.py  streaming.py
knowledge_base/: currency_and_money.md  customs_and_duty_free.md  destinations.md  health_requirements.md  transit_rules.md  travel_tips.md  visa_requirements.md
presentation/: api.py  api_client.py  api_models.py  api_routes_auth.py  api_routes_itinerary.py  api_routes_planning.py  api_routes_system.py  api_runtime.py  api_security.py  api_sse.py  auth.py  planning_flow.py  review_ui.py  streamlit_app.py  trip_form.py
scripts/: dev.py  evaluate_rag.py  rebuild_rag.py  sync_reference_data.py
tests/: conftest.py  golden_prompt_replay.py  test_api.py  test_api_client.py  test_api_integration.py  test_attractions_research.py  test_budget_aggregator.py  test_checkpointer.py  test_currency_utils.py  test_email_sender.py  test_flight_agent.py  test_geocoding_client.py  test_golden_prompts.py  (+19 more)
(+150 files in other folders)
