[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripbreeze-ai"
version = "0.1.0"
description = "AI-powered single-trip planning assistant"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.1.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.1.0",
    "streamlit>=1.38.0",
    "google-search-results>=2.4.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "python-json-logger>=3.2.0",
]

[tool.setuptools]
packages = ["application", "domain", "infrastructure", "presentation"]
py-modules = ["app", "config"]
